# llamaindex-blog-qna-chatbot

./: .env.example  .gitignore  README.md  pyproject.toml
crawl_llamaindex_blog/: blogs.json  scrapy.cfg
crawl_llamaindex_blog/crawl_llamaindex_blog/: items.py  middlewares.py  pipelines.py  settings.py
crawl_llamaindex_blog/crawl_llamaindex_blog/spiders/: llama_blog_spider.py
notebooks/: 001-explore-crawled-data.ipynb  002-rag-pipeline.ipynb
src/features/append_reference/: custom_query_engine.py  custom_response_synthesizer.py
src/run/: args.py  cfg.py  orchestrator.py  utils.py
src/run/eval/: __init__.py  manual_eval_dataset.py  response.py  retrieval.py
