[tool.poetry]
name = "chain-frost-a1"
version = "0.1.0"
description = ""
authors = ["Quy Dinh <quy.dinh3195@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.3"
ipywidgets = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
