[tool.poetry]
name = "chain-frost-a1"
version = "0.1.0"
description = ""
authors = ["Quy Dinh <quy.dinh3195@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
scrapy = "^2.11.2"
loguru = "^0.7.2"
llama-index = "^0.10.56"
llama-index-llms-ollama = "^0.1.6"
llama-index-embeddings-huggingface = "^0.2.2"
llama-index-embeddings-ollama = "^0.1.2"
llama-index-vector-stores-chroma = "^0.1.10"
llama-hub = "^0.0.79.post1"
spacy = "^3.7.5"  # Required when using RagDatasetGenerator.from_documents
matplotlib = "^3.9.1"
mlflow = "2.14.1"
boto3 = "^1.34.145"
llama-index-llms-together = "^0.1.3"
llama-index-embeddings-together = "^0.1.3"
llama-index-vector-stores-qdrant = "^0.2.13"
llama-index-callbacks-arize-phoenix = "^0.1.6"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.3"
ipywidgets = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
